AHIHI123-27 won't show ads if user subscribed